@@ -4061,16 +4061,16 @@ bool CApplication::ProcessAndStartPlaylist(const CStdString& strPlayList, CPlayL
   if (iPlaylist < PLAYLIST_MUSIC || iPlaylist > PLAYLIST_VIDEO_TEMP)
     return false;
 
+  // if the playlist contains an internet stream, this file will be used
+  // to generate a thumbnail for musicplayer.cover 
+  g_application.m_strPlayListFile = strPlayList;
+
   // first item of the list, used to determine the intent
   CPlayList::CPlayListItem item = playlist[0];
 
   // just 1 item? then play it
   if (playlist.size() == 1)
     return g_application.PlayFile(CFileItem(item));
-
-  // if the playlist contains an internet stream, this file will be used
-  // to generate a thumbnail for musicplayer.cover 
-  g_application.m_strPlayListFile = strPlayList;
 
   // setup correct playlist
   g_playlistPlayer.GetPlaylist(iPlaylist).Clear();
